--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,7 @@ ul {
 
 /*TEAM*/
 
+
 .team {
   display: flex;
   flex-wrap: wrap;
@@ -288,19 +289,22 @@ ul {
   margin-right: 0;
 }
 
+
 .team-content {
   padding-top: 30px;
   padding-bottom: 30px;
   text-align: center;
-  border: 1px solid var(--default-text-color);
+  border: 1px solid #EEEEEE;
   border-top: none;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
 
-.team :nth-last-child(-n + 4) {
-  margin-bottom: 0; 
+.team :nth-last-child(-n+4) {
+  margin-bottom: 0;
 }
+
+
 
 /* Portfolio page*/
 
@@ -354,6 +358,8 @@ ul {
 
 .project-descr {
   padding: 20px 24px;
+  border: 1px solid #EEEEEE;
+  border-top: none;
 }
 
 .project-link {
@@ -382,6 +388,11 @@ ul {
 
 .footer {
   background-color: var(--hero-footer);
+}
+
+.footer-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .white {
