--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,13 @@ ul {
 /* Header */
 
 .header {
+  
+  border-bottom: 1px solid var(--main-brand-color);
+}
+
+.header-container {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--main-brand-color);
 }
 
 .navigation {
@@ -83,6 +87,8 @@ ul {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .logo:hover,
@@ -163,6 +169,9 @@ ul {
 }
 
 .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #ffffff;
   background-color: var(--main-brand-color);
   cursor: pointer;
@@ -171,14 +180,18 @@ ul {
   font-size: 16px;
   line-height: 2;
   letter-spacing: 0.06em;
-  padding: 10px 32px;
   border-radius: 4px;
   border: none;
+  width: 216px;
+  height: 50px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .button:hover,
 .button:focus {
-  color: var(--paragraph-color);
+  color: var(--primary-white-color);
+  background-color: #188CE8;
 }
 
 /* sections */
@@ -186,20 +199,20 @@ ul {
 /*ADVANTAGES*/
 
 .advantages {
-  display: flex;
-  gap: 30px;
-  flex-wrap: wrap;
+  padding-bottom: 0;
 }
 
 .adv-list {
-  width: 270px;
-
-  align-items: center;
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+  
 }
 
-.section.team {
-  background-color: #f5f4fa;
+.adv-item {
+  flex-basis: calc((100% - 30px*3)/4);
 }
+
 
 .section-title {
   color: var(--default-text-color);
@@ -274,15 +287,18 @@ ul {
 
 /*TEAM*/
 
+.team-section {
+  background-color: #F5F4FA;
+}
 
 .team {
   display: flex;
   flex-wrap: wrap;
+  gap: 30px;
 }
 
 .team-member {
-  margin-right: 30px;
-  margin-bottom: 30px;
+  flex-basis: calc((100% - 30px*3)/4);
 }
 
 .team :nth-child(4n) {
@@ -300,9 +316,7 @@ ul {
   border-bottom-right-radius: 4px;
 }
 
-.team :nth-last-child(-n+4) {
-  margin-bottom: 0;
-}
+
 
 
 
@@ -341,19 +355,13 @@ ul {
 .projects {
   display: flex;
   flex-wrap: wrap;
+  gap: 30px;
 }
 
-.projects :nth-child(3n) {
-  margin-right: 0;
-}
 
-.projects :nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
 
 .project-card {
-  margin-right: 30px;
-  margin-bottom: 30px;
+  flex-basis: calc((100% - 30px*2)/3);
 }
 
 .project-descr {
@@ -388,11 +396,16 @@ ul {
 
 .footer {
   background-color: var(--hero-footer);
-}
-
-.footer-container {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.logo-footer {
+  display: block;
+  margin-bottom: 20px;
+  padding-top: 0;
+  padding-bottom: 0;
+  
 }
 
 .white {
@@ -404,11 +417,15 @@ ul {
   font-style: normal;
   font-weight: 400;
   line-height: 1.7;
+  
 }
 
 .address .address-title {
   color: #ffffff;
   text-decoration: none;
+
+  display: block;
+  margin-bottom: 9px;
 }
 
 .address-title:hover,
@@ -423,4 +440,14 @@ ul {
 .address-title.tel:focus,
 .address-title.tel:hover {
   color: var(--main-brand-color);
+}
+
+.address-item {
+  
+  margin-bottom: 9px;
+
+}
+
+.address-item:last-child {
+  margin-bottom: 0;
 }
